--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,7 @@
     background-color: $hero-footer-color;
     padding-top: 60px;
     padding-bottom: 60px;
+    text-align: center;
     &-join__text,
     &-subscribe__text {
         font-weight: 700;
@@ -12,84 +13,68 @@
         margin-bottom: 20px;
         display: inline-block;
     }
+    &__address {
+        margin-bottom: 60px;
+    }
     &-address {
         font-style: inherit;
+    }
+    &-address__item:not(:last-child) {
+        margin-bottom: 9px;
     }
     &-subscribe__icon {
         fill: $logo-white;
         margin-left: 10px;
     }
-}
-
-
-
-
-@media screen and (max-width: 768px) {
-    .footer {
-        &-address__item:not(:last-child) {
-            margin-bottom: 9px;
-        }
-        &-join__container {
-            max-width: 100%;
-            margin-bottom: 60px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        &-subscribe__form {
-            max-width: 100%;
-        }
-       
+    &-join__container {
+        max-width: 100%;
+        margin-bottom: 60px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-}
-
-@media screen and (max-width: 767px) {
-    .footer {
-        text-align: center;
-        &__logo {
-            margin-bottom: 20px;
-            justify-content: center;
+    &-subscribe__form {
+        max-width: 100%;
+    }
+    &__logo {
+        margin-bottom: 20px;
+        justify-content: center;
+    }
+    &-subscribe__input {
+        display: block;
+        height: 50px;
+        margin-bottom: 20px;
+    }
+    &-address__link[target="_blank"] {
+        color: $logo-white;
+    }
+    &-address__link {
+        color: $footer-contacts-color;
+        transition: color $transition-time $cubic;
+        &:hover,
+        &:focus {
+            color: $secondary-text-color;
         }
-        &-subscribe__input {
-            display: block;
-           
-            height: 50px;
-            margin-bottom: 20px;
-        }
-        &-address__list {
-            margin-bottom: 60px;
-        }
-        &-address__link[target="_blank"] {
-            color: $logo-white;
-        }
-        &-address__link {
-            color: $footer-contacts-color;
-            transition: color $transition-time $cubic;
-            &:hover, &:focus {
-                color: $secondary-text-color;
-            }
-        }
-        &-subscribe__form {
-            display: flex;
-            flex-direction: column;
-        }
-        &-subscribe__input {
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-            border-radius: 4px;
-            background-color: transparent;
-            padding: 15px 16px;
-        
-            color: $logo-white;
+    }
+    &-subscribe__form {
+        display: flex;
+        flex-direction: column;
+    }
+    &-subscribe__input {
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: transparent;
+        padding: 15px 16px;
+        color: $logo-white;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        &::placeholder {
             font-size: 16px;
             line-height: 1.25;
             letter-spacing: 0.03em;
-            &::placeholder {
-                font-size: 16px;
-                line-height: 1.25;
-                letter-spacing: 0.03em;
-                color: rgba(255, 255, 255, 0.6);
-            }
+            color: rgba(255, 255, 255, 0.6);
         }
     }
 }
@@ -118,17 +103,19 @@
         }
     }
 }
+
 @media screen and (min-width: 1200px) {
     .footer {
         background-color: $hero-footer-color;
         padding-top: 60px;
         padding-bottom: 60px;
+        text-align: left;
         &__container {
             display: flex;
             align-items: baseline;
         }
         &__address {
-            margin-right: 70px;
+            margin: 0;
         }
         &__logo {
             margin-bottom: 20px;
@@ -151,6 +138,8 @@
         }
         &-join__container {
             width: 206px;
+            margin-left: 70px;
+            margin-bottom: 0;
         }
         &-join__text,
         &-subscribe__text {
@@ -164,6 +153,7 @@
         }
         &-subscribe__container {
             margin-left: auto;
+            margin-right: 0;
         }
         &-subscribe__input {
             width: 358px;
@@ -188,7 +178,10 @@
             }
         }
         &-subscribe__form {
-            display: flex;
+            flex-direction: row;
+        }
+        &-subscribe__input {
+            margin-bottom: 0;
         }
         &-subscribe__icon {
             fill: $logo-white;
