--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,5 @@
 .backdrop {
+  z-index: 10;
   position: fixed;
   left: 0;
   top: 0;
@@ -21,9 +22,8 @@
   top: 50%;
   padding: 40px;
   text-align: center;
-
+  max-width: 450px;
   transition: transform $transition-time $cubic $transition-time;
-
   border-radius: 4px;
   background-color: $logo-white;
   box-shadow: $modal-shadow;
@@ -34,7 +34,8 @@
     color: $header-text-color;
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
+    
     letter-spacing: 0.03em;
     margin-bottom: 12px;
   }
@@ -65,6 +66,7 @@
     border-color: $modal-input-border;
     border-radius: 4px;
     padding: 12px 12px 12px 42px;
+    outline: none;
     &--comment {
       height: 120px;
       padding-left: 16px;
@@ -83,11 +85,11 @@
     }
   }
   &__policy {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
     color: $main-text-color;
     cursor: pointer;
+    font-size: 12px;
+    line-height: 1.16;
   }
   &__icon {
     position: absolute;
@@ -155,22 +157,24 @@
     }
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (min-width: 480px) {
   .modal {
-    max-width: 450px;
-    min-height: 609px;
-    &__title {
-      line-height: 1.5;
-    }
+    width: 450px;
     &__policy {
-      font-size: 12px;
-      line-height: 1.16;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
-@media screen and (max-width: 769px) {
+
+@media screen and (min-width: 1200px) {
   .modal {
-    width: 100%;
-    min-height: 581px;
+    width: 528px;
+    &__title {
+        line-height: 1.15;
+      }
   }
+  
 }
