--- a/css/main.css
+++ b/css/main.css
@@ -205,9 +205,6 @@ body {
   line-height: 1.176;
   letter-spacing: 0.02em;
 }
-.header__contacts-item:not(:last-child) {
-  margin-bottom: 10px;
-}
 .header__contacts-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -265,6 +262,16 @@ body {
 }
 .header__mobile-menu.is-open {
   display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header__pages-item {
   margin-bottom: 30px;
@@ -412,6 +419,9 @@ body {
   .header .burger__button-menu {
     display: none;
   }
+  .header__contacts-item:first-child {
+    margin-bottom: 10px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .header__container {
@@ -526,7 +536,7 @@ body {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/index/hero_mobile_1x.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_mobile_1x.jpg);
 }
-@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 2dppx) {
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .overlay {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../image/index/hero_mobile_2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../image/index/hero_mobile_2x.jpg);
@@ -1065,7 +1075,7 @@ body {
   top: 50%;
   padding: 40px;
   text-align: center;
-  max-width: 450px;
+  max-width: 100%;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
@@ -1258,6 +1268,9 @@ body {
   }
   .modal__title {
     line-height: 1.15;
+  }
+  .modal__policy {
+    font-size: 14px;
   }
 }
 .filter__button-set {
