--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,9 +30,6 @@
     line-height: 1.176;
     letter-spacing: 0.02em;
   }
-  &__contacts-item:not(:last-child) {
-    margin-bottom: 10px;
-  }
   &__contacts-list {
     display: flex;
     flex-direction: column;
@@ -64,11 +61,9 @@
     order: -1;
     margin-bottom: 32px;
   }
-
   &__contacts-list {
     margin-bottom: 64px;
   }
-
   &__mobile-menu {
     display: none;
     position: absolute;
@@ -80,11 +75,12 @@
     padding: 48px 40px;
     z-index: 1;
   }
-
   &__mobile-menu.is-open {
     display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
-
   &__pages-item {
     margin-bottom: 30px;
   }
@@ -163,10 +159,10 @@
       display: flex;
       align-items: center;
     }
-      &__contacts-top {
-        order: 0;
-        margin-bottom: 0px;
-      }
+    &__contacts-top {
+      order: 0;
+      margin-bottom: 0px;
+    }
     &__pages-list {
       display: flex;
       width: 294px;
@@ -226,6 +222,9 @@
     }
     .burger__button-menu {
       display: none;
+    }
+    &__contacts-item:first-child {
+      margin-bottom: 10px;
     }
   }
 }
