--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -40,14 +40,14 @@
   background-size: cover;
   background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
     url(../../image/index/hero_mobile_1x.jpg);
-    @media screen and (min-resolution: 2dppx) {
+    @media (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
       url(../../image/index/hero_mobile_2x.jpg);
   }
     @media screen and (min-width: 768px) {
       background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
       url(../../image/index/hero_tablet_1x.jpg);
-    @media screen and (min-resolution: 2dppx) {
+    @media (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
       url(../../image/index/hero_tablet_2x.jpg);
     }
@@ -55,7 +55,7 @@
     @media screen and (min-width: 1200px) {
       background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
       url(../../image/index/hero_pc_1x.jpg);
-    @media screen and (min-resolution: 2dppx) {
+    @media (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
       url(../../image/index/hero_pc_2x.jpg);
     }
