--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -61,7 +61,7 @@
   .overlay {
     background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
     url('../../image/index/hero_pc_1x.jpg');
-  @media (min-resolution: 2dppx) {
+  @media screen and (min-resolution: 2dppx), screen and (min-resolution: 192dpi), screen and (min-device-pixel-ratio: 2) {
     background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
     url('../../image/index/hero_pc_2x.jpg');
     }
