--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -39,20 +39,20 @@
   background-position: center;
   background-size: cover;
   background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-    url('../../image/index/hero_mobile_1x.jpg');
+    url('../image/index/hero_mobile_1x.jpg');
     @media (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-      url('../../image/index/hero_mobile_2x.jpg');
+      url('../image/index/hero_mobile_2x.jpg');
   }
     
 }
 @media screen and (min-width: 768px) {
   .overlay {
     background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-    url('../../image/index/hero_tablet_1x.jpg');
+    url('../image/index/hero_tablet_1x.jpg');
   @media (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-      url('../../image/index/hero_tablet_2x.jpg');
+      url('../image/index/hero_tablet_2x.jpg');
     }
   }
 }
@@ -60,10 +60,10 @@
 @media screen and (min-width: 1200px) {
   .overlay {
     background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-    url('../../image/index/hero_pc_1x.jpg');
+    url('../image/index/hero_pc_1x.jpg');
   @media screen and (min-resolution: 2dppx), screen and (min-resolution: 192dpi), screen and (min-device-pixel-ratio: 2) {
     background-image: linear-gradient(to right, $hero-overlay, $hero-overlay),
-    url('../../image/index/hero_pc_2x.jpg');
+    url('../image/index/hero_pc_2x.jpg');
     }
   }
 }
