--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,7 @@ body {
   color: #2196F3;
 }
 .header__container {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -528,6 +529,7 @@ body {
   }
 }
 .overlay {
+  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
@@ -1340,6 +1342,12 @@ body {
   width: 100%;
   height: 100%;
   top: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   padding-left: 24px;
@@ -1359,8 +1367,8 @@ body {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #FFFFFF;
-  -webkit-transform: scale(2);
-          transform: scale(2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 50ms;
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 50ms;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 50ms;
@@ -1386,38 +1394,21 @@ body {
   line-height: 1.88;
 }
 
-@media screen and (max-width: 480px) {
-  .service__item {
-    margin-bottom: 30px;
-  }
-  .service__item:last-child {
-    margin-bottom: 0;
-  }
-  .service__wrap {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .service__item {
     -ms-flex-preferred-size: calc(50% - 30px);
         flex-basis: calc(50% - 30px);
+  }
+  .service__card {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  .service__link {
     height: 100%;
   }
-  .service__wrap {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .service__item {
     -ms-flex-preferred-size: calc(33.3333333333% - 30px);
         flex-basis: calc(33.3333333333% - 30px);
