--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,6 +1,10 @@
 .logo {
   font-family: 'Raleway', sans-serif;
   color: $secondary-text-color;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.1666;
 
   &--header {
     color: $logo-black;
@@ -12,16 +16,8 @@
     color: $logo-white;
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .logo {
     font-size: 26px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .logo {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.1666;
-    display: flex;
   }
 }
