--- a/sass/layout/_service.scss
+++ b/sass/layout/_service.scss
@@ -15,13 +15,13 @@
   }
   &__wrap {
     position: absolute;
-    width: 100%;
     height: 100%;
     top: 1px;
     display: flex;
     align-items: center;
 
     transform: translateY(100%);
+
     padding-left: 24px;
     padding-right: 24px;
     background-color: $thumb-background;
@@ -32,16 +32,13 @@
     transform: translateY(0);
   }
   &__text {
+    @media screen and (max-width: 355px) {
+      font-size: 14px;
+    }
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
     color: $logo-white;
-    transform: scale(1.2);
-    transition: transform $transition-time $cubic 50ms;
-  }
-  &__link:hover &__text,
-  &__link:focus &__text {
-    transform: scale(1);
   }
   &__card {
     border: 1px solid $border-color;
@@ -68,7 +65,7 @@
     &__card {
       flex-grow: 1;
     }
-   
+
     &__link {
       height: 100%;
     }
